upadted to 21 and code smells sloved